--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{ object.title }}
+  {{ object.title }}
 {% endblock %}
 
 {% block content %}
@@ -18,6 +18,17 @@
           Instructor: {{ object.owner.get_full_name }}
       </p>
       {{ object.overview|linebreaks }}
+      {% if request.user.is_authenticated %}
+        <form action="{% url 'student_enroll_course' %}" method="post">
+          {{ enroll_form }}
+          {% csrf_token %}
+          <input type="submit" value="Enroll now">
+        </form>
+      {% else %}
+        <a href="{% url 'student_registration' %}" class="button">
+          Register to enroll
+        </a>
+      {% endif %}
   </div>
   {% endwith %}
 {% endblock %}
